--- a/src/form/stv-file-origin.html
+++ b/src/form/stv-file-origin.html
@@ -112,6 +112,7 @@
                 },
                 selectedFile: {
                     type: Object,
+                    notify: true
                 },
 
                 bioformats: {
