--- a/src/file/stv-folder-tree-item.html
+++ b/src/file/stv-folder-tree-item.html
@@ -148,6 +148,7 @@
                 this.$.name.classList.remove('dragover');
             },
             handleDrop: function(e) {
+                var me = this;
                 this.$.name.classList.remove('dragover');
                 e.preventDefault();
                 e.stopPropagation();
