--- a/src/dropdown/stv-dropdown.html
+++ b/src/dropdown/stv-dropdown.html
@@ -12,6 +12,10 @@
             color: var(--primary-text-color);
         }
 
+        :host::content ul a:hover {
+            text-decoration: none;
+        }
+
         :host::content > [data-button] {
             /*padding: 5px;*/
             height: 100%;
