--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -231,6 +231,10 @@
                     <content select=".launcher"></content>
                 </div>
 
+                <div id="clusterStatus">
+                    <content select=".cluster_stats"></content>
+                </div>
+
                 <content select=".helpmenu"></content>
             </div>
         </div>
