--- a/src/stv-cluster-status.html
+++ b/src/stv-cluster-status.html
@@ -18,7 +18,7 @@
     <template>
         <stv-dropdown>
             <div data-button>
-                <i class="fa fa-empire"></i>
+                <i class="fa fa-database"></i>
             </div>
             <ul>
                 <li>CPU</li>
